@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
     <groupId>com.example</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -14,7 +8,6 @@
     <description>demo</description>
 
     <modules>
-        <module>A</module>
         <module>B</module>
         <module>C</module>
     </modules>
@@ -22,11 +15,23 @@
 
     <properties>
         <java.version>11</java.version>
+        <maven-surefire-plugin>6</maven-surefire-plugin>
+        <maven.compiler.source>6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+                <version>2.7.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+                <version>2.7.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -34,11 +39,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <version>2.7.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.7.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -46,7 +53,22 @@
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-test</artifactId>
+                    <version>2.7.0</version>
+                </plugin>
+                <plugin>
 
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter</artifactId>
+                    <version>2.7.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.5.0</version>
+                </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
@@ -57,13 +79,30 @@
                     <artifactId>diff-coverage-maven-plugin</artifactId>
                     <version>0.3.2-SNAPSHOT</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                    <configuration>
+                        <forkCount>1.0C</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>@{jacocoArgLine} -Xmx2G --illegal-access=permit</argLine>
+                        <rerunFailingTestsCount>3</rerunFailingTestsCount>
+                        <systemPropertyVariables>
+
+                            <org.slf4j.simpleLogger.defaultLogLevel>WARN
+                            </org.slf4j.simpleLogger.defaultLogLevel>
+                            <org.slf4j.simpleLogger.showDateTime>true
+                            </org.slf4j.simpleLogger.showDateTime>
+                            <java.util.logging.config.file>logging.properties
+                            </java.util.logging.config.file>
+                        </systemPropertyVariables>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin><plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <executions>
@@ -75,61 +114,9 @@
                     <configuration>
                         <propertyName>jacocoArgLine</propertyName>
                         <includes>
-                            <include>A.*</include>
-                            <include>B.*</include>
-                            <include>C.*</include>
+                            <include>com.example.b.*</include>
+                            <include>com.example.c.*</include>
                         </includes>
-                    </configuration>
-                </execution>
-                <execution>
-                    <id>check</id>
-                    <phase>test</phase>
-                    <goals>
-                        <goal>check</goal>
-                    </goals>
-                    <configuration>
-                        <rules>
-                        <!-- Ensure minimum lines covered at project level for some projects. mvn artifactid is used to identify project -->
-                            <rule>
-                                <includes>
-                                    <include>A</include>
-                                </includes>
-                                <element>BUNDLE</element>
-                                <limits>
-                                    <limit>
-                                        <counter>LINE</counter>
-                                        <value>COVEREDRATIO</value>
-                                        <minimum>0.68</minimum>
-                                    </limit>
-                                </limits>
-                            </rule>
-                            <rule>
-                                <includes>
-                                    <include>B</include>
-                                </includes>
-                                <element>BUNDLE</element>
-                                <limits>
-                                    <limit>
-                                        <counter>LINE</counter>
-                                        <value>COVEREDRATIO</value>
-                                        <minimum>0.68</minimum>
-                                    </limit>
-                                </limits>
-                            </rule>
-                            <rule>
-                                <includes>
-                                    <include>C</include>
-                                </includes>
-                                <element>BUNDLE</element>
-                                <limits>
-                                    <limit>
-                                        <counter>LINE</counter>
-                                        <value>COVEREDRATIO</value>
-                                        <minimum>0.68</minimum>
-                                    </limit>
-                                </limits>
-                            </rule>
-                        </rules>
                     </configuration>
                 </execution>
                 <execution>
